added controller for deployments events
